--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="form-floating">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" style="height: 100px; font-size:xx-large"></textarea>
-        <label for="floatingTextarea">To-Do item</label>
+    <div class="card" style="width: 50rem;">
+        <img class="card-img-top; img-responsive" style="height: 17rem; width: auto;" src="images/todo_CoverPhoto.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h1 class="card-title">To-Do LIST MAKER</h1>
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" style="height: 100px; font-size:xx-large"></textarea>
+            <label for="floatingTextarea">Insert To-Do item</label>
+          </div>
+          <br>
+        <button class="btn btn-outline-info btn-primary btn-lg" id="add_button"> Add </button>
+        </div>
       </div>
     
-    <button class="btn btn-outline-info btn-primary btn-lg"> Add </button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="functions.js"></script>
 </body>
